syntax="proto3";

import "commonpb.proto";

package user;

service UserService {
    rpc GetMe(common.Empty) returns (UserResponse);
    rpc GetUser(common.GetByIdRequest) returns (UserResponse);
    rpc SearchUsers(UserSearchRequest) returns (UserListResponse);
    rpc UpdateUser(UserUpdateRequest) returns (UserResponse);
    rpc UploadAvatar(common.File) returns (UserResponse);
    rpc ToggleFollow(common.GetByIdRequest) returns (FollowResponse);
    rpc ToggleBlock(common.GetByIdRequest) returns (FollowResponse);
    // Report User
    rpc AddComment(common.CommentRequest) returns (common.CommentResponse);
    // Hide Comment
}

message UserSearchRequest{
    common.Query query=1;
    common.PaginationRequest pagination=2;
}

// Be able to update only own user
message UserUpdateRequest {
    optional string email=2;
    optional string username=3;
    optional string name = 4;
    optional string lastname = 5;
}


message User{
    int32 id=1;
    string email=2;
    string username=3;
    string name = 4;
    string lastname = 5;
    string avatarPath = 6;
}

message UserResponse{
    User user=1;
}

message UserListResponse{
    repeated User user=1;
    common.PaginationResponse pagination=2;
}

message FollowResponse{
    User user=1;// It can be user Id
    bool isFollowing=2;
}

message BlockResponse{
    User user=1;// It can be user Id
    bool isBlocked=2;
}


