syntax="proto3";

package file;

service FileService {
    rpc Upload(UploadRequest) returns (GetFileResponse);
    rpc GetFile(FileId) returns (GetFileResponse);
}

message UploadRequest{
    bytes data = 1; 
    string contentType = 2;
}

message FileId {
    int32 id = 1; 
}

message GetFileResponse {
    string id = 1;
    string path = 2;
    string contentType = 3;
}
